# Azure-Open-Ai-Techbot

./: CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/tech_bot/: configs.py  main.py  utils.py
